<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.sas_apps.reddit.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayoutToolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:logo="@drawable/ic_logo"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name"
                app:titleMarginStart="28dp"
                app:titleTextColor="@android:color/white" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayoutToolbar"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:id="@+id/edit_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="7"
                android:hint="@string/search_sub_reddit"
                android:paddingStart="8dp"
                android:singleLine="true"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/search" />


        </LinearLayout>

        <ListView
            android:id="@+id/list_homePosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linLayout"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
